# meganz-account-generator-cpp

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: guerrillamail_client_c.cmake
cmake/vcpkg_overlay_triplets/: x64-windows-mega.cmake
include/meganz_account_generator/: account_generator.hpp
src/: CMakeLists.txt
src/cli/: main.cpp  random_app_key.cpp  random_app_key.hpp
src/core/: account_generator.cpp  account_generator.hpp  account_generator_detail.hpp
src/mail/: guerrillamail_client.cpp  guerrillamail_client.hpp  guerrillamail_client_detail.hpp
src/mega/: mega_api_client.cpp  mega_api_client.hpp  request_waiter.cpp  request_waiter.hpp
src/public/: account_generator.cpp
src/smoke/: CMakeLists.txt  pass1_smoke.cpp
tests/: CMakeLists.txt  account_generator_detail_test.cpp  account_generator_e2e_test.cpp  cli_help_test.cmake  cli_random_app_key_test.cpp  mail_header_self_sufficient.cpp  mail_wrapper_detail_test.cpp  mega_api_client_interface_test.cpp  public_api_usage_test.cpp  public_header_self_sufficient.cpp  request_waiter_test.cpp
